# Computer_Vision

./: README.md
GTSRB_project/cpp_code/: CMakeLists.txt  README.rtf  gtsrb_EDA.ipynb
GTSRB_project/cpp_code/output/: evaluation_results_test_clahe_hog.txt  evaluation_results_test_clahehueyuv_hog.txt  evaluation_results_test_claheyuv_hog.txt  evaluation_results_test_claheyuvhue_hog.txt  evaluation_results_test_hog.txt  evaluation_results_test_hue_hog.txt  evaluation_results_test_hueyuv_hog.txt  evaluation_results_test_yuv_hog.txt  evaluation_results_val_clahe-yuv_hog.txt  evaluation_results_val_clahe_hog.txt  evaluation_results_val_clahehueyuv_hog.txt  evaluation_results_val_claheyuv_hog.txt  evaluation_results_val_claheyuvhue_hog.txt  evaluation_results_val_hog.txt  evaluation_results_val_hue_hog.txt  evaluation_results_val_hueyuv_hog.txt  evaluation_results_val_yuv_hog.txt
GTSRB_project/cpp_code/src/: main.cpp
Kuwahara_filter/Kuwahara_base/images/: kuwahara_ET_bmx.tif  limes_15.tif  limes_3.tif  limes_5.tif
Kuwahara_filter/Kuwahara_base/src/: LV_kuwa_filter.cpp
Kuwahara_filter/Kuwahara_parallel/: CMakeLists.txt
Kuwahara_filter/Kuwahara_parallel/images/: limes_7x7.tif
Kuwahara_filter/Kuwahara_parallel/src/: kuwahara_filter.cpp
QRcode/: CMakeLists.txt
QRcode/src/: LV_decodeQR.cpp
opencv_cam_with_fps/: CMakeLists.txt
opencv_cam_with_fps/camera_with_fps.dSYM/Contents/: Info.plist
opencv_cam_with_fps/camera_with_fps.dSYM/Contents/Resources/DWARF/: camera_with_fps
(+1 files in other folders)
